test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartcaptar-back-service
spec:
  selector:
    app: smartcaptar-back
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 1337
      nodePort: 31110
