test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartcaptar-back
  labels:
    app: smartcaptar-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartcaptar-back
  template:
    metadata:
      labels:
        app: smartcaptar-back
    spec:
      containers:
      - name: smartcaptar-back
        imagePullPolicy: Always
        image: ghcr.io/slaclab/smartcaptar-back:sha-76e7930
        envFrom:
        - configMapRef:
            name: env-config-map
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        ports:
        - containerPort: 1337
        volumeMounts:
          - mountPath: "/myapp/.env-oracle-credential"
            name: envfile
            readOnly: true
      imagePullSecrets:
        - name: github-secret
      volumes:
        - name: envfile
          secret:
            secretName: oracle-credential
